--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,9 +7,11 @@
   --secondary-color: #313bac;
   --black-color: #030303;
   --lightGray-color: #e4e4e4;
-  --gray-color: #6b7688;
+  --gray-color-light: #6b7688;
+  --gray-color-dark: #4f545c;
   --brown-color: #46364a;
   --white-color: #ffffff;
+  --blue-color: #73b4ff;
 }
 
 * {
