--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,5 +1,6 @@
 .app {
   background-color: var(--primary-color);
+  background-image: url(/);
   font-family: var(--font-base);
 }
 
@@ -52,7 +53,7 @@
 }
 
 .head-text {
-  font-size: 2.75rem;
+  font-size: 3rem;
   font-weight: 800;
   text-align: center;
   color: var(--black-color);
@@ -72,7 +73,7 @@
 }
 
 .p-text {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   text-align: left;
   color: var(--gray-color);
   line-height: 1.5;
