--- a/frontend/src/container/Header/Header.scss
+++ b/frontend/src/container/Header/Header.scss
@@ -1,6 +1,6 @@
 #home {
   position: relative;
-  background: url(../../assets/bgWhite.png);
+  background: url(../../assets/lightbg.jpg);
   background-size: cover;
   background-position: center;
   // align-items: center;
@@ -20,7 +20,7 @@
   height: 100%;
   flex-direction: row;
 
-  padding: 6rem 2rem 0;
+  padding: 6rem .5rem 0;
 
   @media screen and (max-width: 2000px) {
     padding-top: 8rem;
@@ -66,14 +66,134 @@
     flex-direction: row;
     width: auto;
 
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
   }
 
   .tag-cmp {
     flex-direction: column;
     margin-top: 2rem;
     p {
-
+      width: 100%;
+      text-transform: uppercase;
+      text-align: right;
     }
+  }
+
+  span {
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: var(--black-color);
+
+    @media screen and (min-width: 2000px) {
+      font-size: 5rem;
+    }
+  }
+
+  @media screen and (max-width: 1200px) {
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+}
+
+.app__header-circles {
+  flex: 0.75;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  height: 100%;
+  margin-left: 1rem;
+  width: 100px;
+
+  div {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    padding: 3px;
+
+    background: transparent;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+
+    img {
+      width: 100%;
+      height: 100%;
+      transform: rotate(-5deg);
+    }
+  }
+
+  // circles with different height & width
+
+  div:nth-child(1) {
+    width: 100px;
+    height: 100px;
+  }
+
+  div:nth-child(2) {
+    margin: 1.75rem;
+    width: 150px;
+    height: 150px;
+  }
+
+  div:nth-child(3) {
+    width: 70px;
+    height: 70px;
+  }
+
+  @media screen and (min-width: 2000px) {
+    div:nth-child(2) {
+      width: 400px;
+      height: 400px;
+    }
+
+    div:nth-child(3) {
+      width: 170px;
+      height: 170px;
+    }
+
+    div:nth-child(1) {
+      width: 200px;
+      height: 200px;
+    }
+  }
+
+  @media screen and (max-width: 1200px) {
+    width: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: 0;
+
+    div {
+      margin: 1rem;
+    }
+  }
+}
+
+.app__header-img {
+  flex: 1;
+  height: 100%;
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  position: relative;
+
+  img {
+    width: 100%;
+    object-fit: cover;
+    z-index: 1;
+  }
+
+  .overlay_circle {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 0;
+    width: 100%;
+    height: 90%;
+  }
+
+  @media screen and (max-width: 1200px) {
+    margin: 2rem 0;
   }
 }
