--- a/frontend/src/container/Header/Header.scss
+++ b/frontend/src/container/Header/Header.scss
@@ -20,7 +20,7 @@
   height: 100%;
   flex-direction: row;
 
-  padding: 6rem .5rem 0;
+  padding: 6rem 0.5rem 0;
 
   @media screen and (max-width: 2000px) {
     padding-top: 8rem;
@@ -102,7 +102,7 @@
   justify-content: space-evenly;
   align-items: flex-start;
   height: 100%;
-  margin-left: 1rem;
+  margin-left: 4rem;
   width: 100px;
 
   div {
@@ -112,7 +112,7 @@
     padding: 3px;
 
     background: transparent;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.17);
 
     img {
       width: 100%;
@@ -124,19 +124,33 @@
   // circles with different height & width
 
   div:nth-child(1) {
+    width: 90px;
+    height: 90px;
+    margin: 0;
+  }
+
+  div:nth-child(2) {
+    // margin: 1.rem;
+    width: 130px;
+    height: 130px;
+    margin-left: 3rem;
+  }
+
+  div:nth-child(3) {
     width: 100px;
     height: 100px;
   }
 
-  div:nth-child(2) {
-    margin: 1.75rem;
-    width: 150px;
-    height: 150px;
+  div:nth-child(4) {
+    width: 120px;
+    height: 120px;
+    margin-left: 5.2rem;
   }
 
-  div:nth-child(3) {
-    width: 70px;
-    height: 70px;
+  div:nth-child(5) {
+    width: 120px;
+    height: 120px;
+    margin-bottom: 1rem;
   }
 
   @media screen and (min-width: 2000px) {
@@ -179,7 +193,8 @@
 
   img {
     width: 100%;
-    object-fit: cover;
+    height: 100%;
+    object-fit: contain;
     z-index: 1;
   }
 
