V-0.7 about start initial

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,9 @@
   --brown-color: #46364a;
   --white-color: #ffffff;
   --blue-color: #73b4ff;
+  --cyan-color: #59d0ff;
+  --red-color: #ff0000;
+  
 }
 
 * {
