--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,7 +1,9 @@
 .app {
   background-color: var(--primary-color);
-  background-image: url(/);
+  background-image: url("./assets/lightbg.jpg");
   font-family: var(--font-base);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .app__whitebg {
@@ -53,14 +55,14 @@
 }
 
 .head-text {
-  font-size: 3rem;
+  font-size: 2.75rem;
   font-weight: 800;
   text-align: center;
   color: var(--black-color);
   text-transform: capitalize;
 
   span {
-    color: var(--secondary-color);
+    color: var(--red-color);
   }
 
   @media screen and (min-width: 2000px) {
