--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -105,27 +105,29 @@
   justify-content: flex-end;
   align-items: center;
   flex-direction: column;
-
-  padding: 1rem;
+  margin-bottom: 1rem;
+  padding: 2rem;
 
   div {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: var(--white-color);
+    // background-color: var(--blue-color);
     margin: 0.25rem 0;
-    border: 1px solid var(--lightGray-color);
+    border: 2px solid var(--blue -color);
 
     display: flex;
     justify-content: center;
     align-items: center;
+    opacity: 0.4;
 
     transition: all 0.3s ease-in-out;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 
     svg {
       width: 15px;
       height: 15px;
-      color: var(--gray-color);
+      color: var(--white-color);
     }
 
     &:hover {
@@ -156,7 +158,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-
+  background-color: rgba(0, 0, 0, 0);
   padding: 1rem;
 
   .app__navigation-dot {
