--- a/frontend/src/container/About/About.scss
+++ b/frontend/src/container/About/About.scss
@@ -1,8 +1,43 @@
+.app__about {
+  flex: 1;
+  width: 100%;
+  flex-direction: column;
+}
+
 .app__profiles {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 2rem;
+  flex-wrap: wrap;
+}
+
+.app__profile-item {
+  width: 13rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  margin: 2rem;
+  border-radius: 15px;
+  padding: 5px;
+
+  // padding: 9px;
+  img {
+    box-shadow: 0 0 50px rgba(42, 98, 100, 0.2);
+    width: 100%;
+    height: 180px;
+    border-radius: 10px;
+    object-fit: cover;
+    padding: 0.5rem;
+  }
+
+  @media screen and (min-width: 2000px) {
+    width: 400px;
+    margin: 2rem 4rem;
+
+    img {
+      height: 350px;
+    }
+  }
 }
