--- a/frontend/src/container/Header/Header.scss
+++ b/frontend/src/container/Header/Header.scss
@@ -1,6 +1,6 @@
 #home {
   position: relative;
-  background: url(../../assets/lightbg.jpg);
+  // background: url(../../assets/lightbg.jpg);
   background-size: cover;
   background-position: center;
   // align-items: center;
@@ -192,20 +192,25 @@
   position: relative;
 
   img {
+    position: relative;
+    // left: 2;
+    // right: inherit;
+    // bottom: 0;
     width: 100%;
     height: 100%;
     object-fit: contain;
     z-index: 1;
+    
   }
 
   .overlay_circle {
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: 1rem;
     z-index: 0;
     width: 100%;
-    height: 90%;
+    height: 95%;
   }
 
   @media screen and (max-width: 1200px) {
