--- a/frontend/src/container/About/About.scss
+++ b/frontend/src/container/About/About.scss
@@ -1,7 +1,12 @@
 .app__about {
   flex: 1;
   width: 100%;
+  position: relative;
   flex-direction: column;
+}
+
+.top_text {
+  margin-top: 5rem;
 }
 
 .app__profiles {
