--- a/frontend/src/container/Skills/Skills.scss
+++ b/frontend/src/container/Skills/Skills.scss
@@ -23,7 +23,7 @@
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: flex-start;
-  margin-right: 3rem;
+  margin-right: 5rem;
 
   @media screen and (max-width: 900px) {
     margin-right: 0;
@@ -56,6 +56,29 @@
       transform: scale(1.05);
       transition-duration: 0.5s;
       box-shadow: 0 0 50px rgba(22, 48, 49, 0.2);
+    }
+
+    @media screen and (min-width: 2000px) {
+      width: 150px;
+      height: 150px;
+    }
+
+    @media screen and (max-width: 450px) {
+      width: 70px;
+      height: 70px;
+    }
+  }
+
+  p {
+    font-weight: 500;
+    margin-top: 0.5rem;
+  }
+
+  @media screen and (min-width: 2000px) {
+    margin: 1rem 2rem;
+
+    p {
+      margin-top: 1rem;
     }
   }
 }
