--- a/frontend/src/container/Skills/Skills.scss
+++ b/frontend/src/container/Skills/Skills.scss
@@ -5,11 +5,13 @@
 }
 
 .app__skills-container {
-  width: 80%;
+  width: 90%;
   margin-top: 3rem;
-
+  justify-content: center;
+  align-items: center;
   display: flex;
   flex-direction: row;
+  margin-left: 4rem;
 
   @media screen and (max-width: 900px) {
     width: 100%;
@@ -42,9 +44,9 @@
     width: 90px;
     height: 90px;
     border-radius: 50%;
-    box-shadow: 0 0 20px rgba(22, 48, 49, 0.2);
+    box-shadow: 0 0 20px rgba(22, 48, 49, 0.3);
 
-    // background-color: var(--blue-color);
+    background-color: rgba(215, 235, 225, 0.35);
 
     img {
       width: 70%;
@@ -55,7 +57,7 @@
     &:hover {
       transform: scale(1.05);
       transition-duration: 0.5s;
-      box-shadow: 0 0 50px rgba(22, 48, 49, 0.2);
+      box-shadow: 0 0 50px rgba(22, 48, 49, 0.4);
     }
 
     @media screen and (min-width: 2000px) {
@@ -80,5 +82,83 @@
     p {
       margin-top: 1rem;
     }
+  }
+}
+
+.app__skills-exp {
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+
+  @media screen and (max-width: 900px) {
+    margin-top: 2rem;
+  }
+}
+
+.app__skills-exp-item {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin: 1rem 0;
+  // box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+  // border-radius: 15px;
+  // padding: 5px;
+}
+
+.app__skills-exp-works {
+  flex: 1;
+
+  .app__skills-exp-work {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-bottom: 1rem;
+    cursor: pointer;
+
+    h4 {
+      font-weight: 500;
+    }
+
+    p {
+      font-weight: 400;
+      color: var(--gray-color);
+      margin-top: 5px;
+    }
+  }
+}
+
+.app__skills-exp-year {
+  margin-right: 3rem;
+
+  p {
+    font-weight: 800;
+    color: var(--secondary-color);
+  }
+
+  @media screen and (max-width: 450px) {
+    margin-right: 1rem;
+  }
+}
+
+.skills-tooltip {
+  max-width: 300px !important;
+  background-color: var(--white-color) !important;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.1) !important;
+  border-radius: 5px !important;
+  padding: 1rem !important;
+  color: var(--gray-color) !important;
+  text-align: center !important;
+  line-height: 1.5 !important;
+  opacity: 1 !important;
+
+  @media screen and (min-width: 2000px) {
+    font-size: 1.75rem !important;
+    max-width: 500px !important;
+    line-height: 2 !important;
   }
 }
