--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -10,6 +10,9 @@
   background-color: var(--white-color);
 }
 
+.app__bluebg {
+  background-color: var(--blue-color);
+}
 .app__primarybg {
   background-color: var(--primary-color);
 }
