--- a/frontend/src/container/Footer/Footer.scss
+++ b/frontend/src/container/Footer/Footer.scss
@@ -77,7 +77,7 @@
     margin: 0.75rem 0;
     border-radius: 10px;
     cursor: pointer;
-    background-color: var(--primary-color);
+    // background-color: var(--primary-color);
 
     transition: all 0.3s ease-in-out;
 
