--- a/frontend/src/container/Footer/Footer.scss
+++ b/frontend/src/container/Footer/Footer.scss
@@ -15,6 +15,7 @@
   align-items: center;
   flex-wrap: wrap;
   margin: 4em 2rem 2rem;
+  // padding: 5px;
 
   .app__footer-card {
     min-width: 290px;
@@ -27,12 +28,13 @@
     padding: 1rem;
     border-radius: 10px;
     cursor: pointer;
-    background-color: #fef4f5;
+    // background-color: #fef4f5;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 
     transition: all 0.3s ease-in-out;
 
     img {
-      width: 40px;
+      width: 48px;
       height: 40px;
       margin: 0 0.7rem;
     }
@@ -43,9 +45,10 @@
     a {
       text-decoration: none;
       font-weight: 500;
+      color: #020f0f;
     }
     &:hover {
-      box-shadow: 0 0 25px #fef4f5;
+      box-shadow: 0 0 25px #020f0f;
     }
 
     @media screen and (max-width: 450px) {
@@ -59,20 +62,21 @@
 }
 
 .app__footer-cards .app__footer-card:last-child {
-  background-color: #f2f7fb;
+  // background-color: #f2f7fb;
 }
 
 .app__footer-cards .app__footer-card:last-child:hover {
-  box-shadow: 0 0 25px #f2f7fb;
+  box-shadow: 0 0 25px #020f0f;
 }
 
 .app__footer-form {
   width: 60%;
   flex-direction: column;
   margin: 1rem 2rem;
+  padding-top: 1rem;
 
   div {
-    width: 100%;
+    width: 90%;
 
     margin: 0.75rem 0;
     border-radius: 10px;
@@ -84,10 +88,12 @@
     input,
     textarea {
       width: 100%;
-      padding: 0.95rem;
+      padding: 1rem;
       border: none;
       border-radius: 7px;
-      background-color: var(--primary-color);
+      // margin-left: 1rem;
+      // margin-right: 1rem;
+      // background-color: var(--primary-color);
 
       font-family: var(--font-base);
       color: var(--secondary-color);
@@ -99,7 +105,7 @@
     }
 
     &:hover {
-      box-shadow: 0 0 25px var(--primary-color);
+      box-shadow: 0 0 25px var(--black-color);
     }
   }
 
@@ -107,19 +113,20 @@
     padding: 1rem 2rem;
     border-radius: 10px;
     border: none;
-    background-color: var(--secondary-color);
+    background-color: rgba(215, 235, 225, 0.35);
 
-    font-weight: 500;
+    font-weight: 600;
     color: var(--white-color);
     outline: none;
-    margin: 2rem 0 0 0;
+    margin: 1rem 0 2rem 0;
     font-family: var(--font-base);
 
     transition: cubic-bezier(0.55, 0.085, 0.68, 0.53);
     cursor: pointer;
 
     &:hover {
-      background-color: #2430af;
+      transition:cubic-bezier(0.895, 0.03, 0.685, 0.22);
+      background-color: #2596be;
     }
   }
 
