Final Footer Design added

--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -34,8 +34,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
-  list-style: none;
+  list-style: armenian;
+  padding: auto;
+  margin: 0;
 
   li {
     margin: 0 1rem;
