--- a/frontend/src/container/Footer/Footer.scss
+++ b/frontend/src/container/Footer/Footer.scss
@@ -14,7 +14,7 @@
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
-  margin: 4em 2rem 2rem;
+  margin: 2 em 2rem 2rem;
   // padding: 5px;
 
   .app__footer-card {
@@ -61,9 +61,9 @@
   }
 }
 
-.app__footer-cards .app__footer-card:last-child {
-  // background-color: #f2f7fb;
-}
+// .app__footer-cards .app__footer-card:last-child {
+//   // background-color: #f2f7fb;
+// }
 
 .app__footer-cards .app__footer-card:last-child:hover {
   box-shadow: 0 0 25px #020f0f;
@@ -72,16 +72,15 @@
 .app__footer-form {
   width: 60%;
   flex-direction: column;
-  margin: 1rem 2rem;
-  padding-top: 1rem;
+  margin: 0 1rem;
+  padding-top: 0.5rem;
 
   div {
     width: 90%;
-
     margin: 0.75rem 0;
     border-radius: 10px;
     cursor: pointer;
-    // background-color: var(--primary-color);
+    // background-color: var(--blue-color);
 
     transition: all 0.3s ease-in-out;
 
@@ -94,6 +93,15 @@
       font-family: var(--font-base);
       color: var(--secondary-color);
       outline: none;
+      background-color: #a6e1f781;
+
+      &:hover {
+        box-shadow: 0 0 25px #a6e1f781;
+      }
+
+      &:hover {
+        box-shadow: 0 0 22px var(--blue-color);
+      }
     }
 
     textarea {
@@ -101,15 +109,19 @@
     }
 
     &:hover {
-      box-shadow: 0 0 25px var(--black-color);
+      box-shadow: 0 0 22px var(--black-color);
     }
+
+    // &:hover {
+    //   box-shadow: 0 0 22px var(--blue-color);
+    // }
   }
 
   button {
     padding: 1rem 2rem;
     border-radius: 10px;
     border: none;
-    background-color: rgba(215, 235, 225, 0.35);
+    background-color: rgba(94, 155, 196, 0.87);
 
     font-weight: 600;
     color: var(--white-color);
@@ -122,7 +134,8 @@
 
     &:hover {
       transition: cubic-bezier(0.895, 0.03, 0.685, 0.22);
-      background-color: #2596be;
+      background-color: #1e7797;
+      box-shadow: 0 0 18px #2596be;
     }
   }
 
